24/08/2011:
	- Updates to configure.in, FIF.cc and DeepZoom.cc to check for and
	  handle missing setenv, unsetenv and log2 functions. Fixes problem
	  on Solaris 10.


02/08/2011:
	- Changed timegm function in FIF.cc to use more cross-platform POSIX
	  mktime function instead. Fixes compilation error on Solaris.


22/07/2011:
	- Added 16bit and CIELAB support for JPEG2000.
	- Other minor cleanups.


24/05/2011:
	- Fix added to DeepZoom.cc as FreeBSD does not have the log2 function.
	  Thanks to Andrew Hankinson for spotting this.


23/05/2011:
	- Another fix to ensure the max layers variable is correctly used in
	  Zoomify and DeepZoom output.


15/04/2009: Version 0.9.9 Released


15/04/2011:
	- Fix to View.h to properly take into account max layers variable.


14/04/2011:
	- Minor logging update to Zoomify.cc.


13/04/2011:
	- Updated VC++ project files.
	- Minor changes to logging in Main.cc.
	- Updated autoconf files.


08/04/2011:
	- Change to TileManager.cc to take into account whether a tile is padded
	  or not when applying a watermark.


06/04/2011:
	- Changes to allow compilation on Windows with Visual C++ Express 2010.
	  New windows subfolder with missing time definitions and VC solution file.
	  Fixes also include definition of snprintf, log2 and S_ISREG, which are
	  all missing in Windows. Many thanks to Rob "Bubba" Hines for his help in
	  porting.


21/03/2011:
	- Added extra NULL assignment to Task pointer after catch block to avoid
	  problems with uninitialized memory being deleted.
	- Added SIGINT handler for Ctrl-C interruptions with strsignal() to
	  display a more meaningful message.


17/03/2011:
	- Clean-up of signed/unsigned variables in IIPImage.h and KakaduImage.h.


15/03/2011:
	- Added sanity check for requested resolutions and tiles in JTL.cc.
	- Fixed problem with edge tiles and watermarking.
	- Clean-up of error message in TPTImage.cc.


14/03/2011:
	- Fixed problem with standalone mode. Can now bind to an FCGI socket by